# sundown

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/sundown-daemon/: Cargo.toml
crates/sundown-daemon/src/: api.rs  auth.rs  bridge.rs  config.rs  main.rs
crates/sundown-daemon/static/: index.html  manifest.json  sw.js
packaging/: install.sh
packaging/systemd/: sundown.service
