[package]
name = "sundown-daemon"
version = "0.1.0"
edition = "2024"
description = "Remote parental control daemon for timekpr-next"
license = "GPL-3.0"

[[bin]]
name = "sundown-daemon"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
base64 = "0.22"
zbus = { version = "5", default-features = false, features = ["tokio"] }
clap = { version = "4", features = ["derive"] }
qr2term = "0.3"

[features]
mock = []
